@@ -1,17 +1,13 @@
 ### Bugs
-- airborne laser isn't aiming and firing.
-- Time override sometimes gets enabled in competitions when it probably shouldn't.
 - Auto-tuning with numeric input fields enabled in the AI GUI won't let the values change
-- Ordering of fields in AI PAW - P keeps ending up at the bottom
-- 3-axis dyn damping toggle should be hidden when dyn damping is disabled
 - Changing the slider resolution sometimes triggers clamping of unclamped values
-- Armour window needs to wait for vessel mass to settle before updating on vessel load.
 - HP of asteroids in the SPH is wrong.
 
 
 ### TODO (smaller items and specific requests / higher priority)
 - Fix bugs
 
+- ? Add an action group trigger to the WM based on the current target being an enemy vessel within a custom distance. - Make it a collapsable section of custom triggers to include other conditions later.
 - Artillery aiming support
 - Lift stacking improvements with logical wing segments
 - Add a distance based modifier to PID: lower P, higher D at longer distances.
