@@ -12,6 +12,7 @@
 	- Make sure Time Override gets disabled when the AI gets destroyed if auto-tuning was enabled (should prevent it from being active unintentionally during competitions).
 	- Hide the 3-axis dynamic damping button when dynamic damping is disabled.
 	- Move the dynamic damping toggles to before the sliders to stop them from jumping around when toggled.
+	- Fix the PID field ordering when the PAW is first opened.
 - Weapons:
 	- Added (or corrected) penetration value for shaped charges to missile/gun/rocket part-menu infocards.
 	- Missiles:
